[tool.poetry]
name = "ds-meetup"
version = "0.1.0"
description = ""
authors = ["cl"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.0"
scikit-learn = "^1.4.1.post1"
langdetect = "^1.0.9"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
