[tool.poetry]
name = "ds-meetup"
version = "0.1.0"
description = ""
authors = ["cl"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
scikit-learn = "^1.4.1.post1"
langdetect = "^1.0.9"
ppscore = "^1.3.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
